@@ -59,6 +59,7 @@
 
 === Bug fixes ===
  * https://github.com/openturns/openturns/milestone/4?closed=1
+ * #1004 (The doc for SobolSimulationAlgorithm has issues)
  * #1006 (Text drawable does not handle size)
  * #1130 (Inconsistency in FittingTest)
  * #1185 (Bug with Normal.computeMinimumLevelSet method)
